--- a/Software/NUCLEO-L476RG_TP_1AB_Pinout.ioc
+++ b/Software/NUCLEO-L476RG_TP_1AB_Pinout.ioc
@@ -1,4 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.CommonPathInternal=null|null|null|null
+ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-2\#ChannelRegularConversion=1
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -8,34 +16,36 @@ I2C1.Timing=0x10909CEC
 KeepUserPlacement=false
 Mcu.CPN=STM32L476RGT3
 Mcu.Family=STM32L4
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI2
-Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=USART1
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP0=ADC1
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI2
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
 Mcu.Pin10=PA3
-Mcu.Pin11=PA5
-Mcu.Pin12=PA6
-Mcu.Pin13=PB10
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA13 (JTMS-SWDIO)
-Mcu.Pin17=PA14 (JTCK-SWCLK)
-Mcu.Pin18=PB3 (JTDO-TRACESWO)
-Mcu.Pin19=PB6
+Mcu.Pin11=PA4
+Mcu.Pin12=PA5
+Mcu.Pin13=PA6
+Mcu.Pin14=PB10
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA13 (JTMS-SWDIO)
+Mcu.Pin18=PA14 (JTCK-SWCLK)
+Mcu.Pin19=PB3 (JTDO-TRACESWO)
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PB7
-Mcu.Pin21=VP_SYS_VS_tim6
-Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PB6
+Mcu.Pin21=PB7
+Mcu.Pin22=VP_SYS_VS_tim6
+Mcu.Pin23=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC2
@@ -43,7 +53,7 @@ Mcu.Pin6=PC3
 Mcu.Pin7=PA0
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=23
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -93,6 +103,8 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.Locked=true
+PA4.Signal=ADCx_IN9
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA5.GPIO_Label=LD2 [green Led]
 PA5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -165,7 +177,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -219,6 +231,8 @@ RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=160000000
 RCC.VCOSAI1OutputFreq_Value=128000000
 RCC.VCOSAI2OutputFreq_Value=128000000
+SH.ADCx_IN9.0=ADC1_IN9,IN9-Single-Ended
+SH.ADCx_IN9.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM2_CH1.0=TIM2_CH1,Encoder_Interface
