--- a/Software/NUCLEO-L476RG_TP_1AB_Pinout.ioc
+++ b/Software/NUCLEO-L476RG_TP_1AB_Pinout.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_9
 ADC1.CommonPathInternal=null|null|null|null
-ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,NbrOfConversionFlag,master,CommonPathInternal
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-2\#ChannelRegularConversion=1
@@ -31,29 +31,51 @@ Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PA3
-Mcu.Pin11=PA4
-Mcu.Pin12=PA5
-Mcu.Pin13=PA6
-Mcu.Pin14=PB10
-Mcu.Pin15=PA9
-Mcu.Pin16=PA10
-Mcu.Pin17=PA13 (JTMS-SWDIO)
-Mcu.Pin18=PA14 (JTCK-SWCLK)
-Mcu.Pin19=PB3 (JTDO-TRACESWO)
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PA4
+Mcu.Pin14=PA5
+Mcu.Pin15=PA6
+Mcu.Pin16=PA7
+Mcu.Pin17=PC4
+Mcu.Pin18=PC5
+Mcu.Pin19=PB0
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
-Mcu.Pin22=VP_SYS_VS_tim6
-Mcu.Pin23=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PB1
+Mcu.Pin21=PB2
+Mcu.Pin22=PB10
+Mcu.Pin23=PB11
+Mcu.Pin24=PB13
+Mcu.Pin25=PB14
+Mcu.Pin26=PB15
+Mcu.Pin27=PC6
+Mcu.Pin28=PC7
+Mcu.Pin29=PC8
 Mcu.Pin3=PH0-OSC_IN (PH0)
+Mcu.Pin30=PC9
+Mcu.Pin31=PA8
+Mcu.Pin32=PA9
+Mcu.Pin33=PA10
+Mcu.Pin34=PA11
+Mcu.Pin35=PA12
+Mcu.Pin36=PA13 (JTMS-SWDIO)
+Mcu.Pin37=PA14 (JTCK-SWCLK)
+Mcu.Pin38=PA15 (JTDI)
+Mcu.Pin39=PB3 (JTDO-TRACESWO)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin5=PC2
-Mcu.Pin6=PC3
-Mcu.Pin7=PA0
-Mcu.Pin8=PA1
-Mcu.Pin9=PA2
-Mcu.PinsNb=24
+Mcu.Pin40=PB4 (NJTRST)
+Mcu.Pin41=PB5
+Mcu.Pin42=PB6
+Mcu.Pin43=PB7
+Mcu.Pin44=VP_SYS_VS_tim6
+Mcu.Pin45=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin5=PC0
+Mcu.Pin6=PC1
+Mcu.Pin7=PC2
+Mcu.Pin8=PC3
+Mcu.Pin9=PA0
+Mcu.PinsNb=46
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -77,6 +99,14 @@ PA0.Signal=S_TIM2_CH1
 PA1.Signal=S_TIM2_CH2
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=STEPPER_MS1
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=STEPPER_ENN
+PA12.Locked=true
+PA12.Signal=GPIO_Output
 PA13\ (JTMS-SWDIO).GPIOParameters=GPIO_Label
 PA13\ (JTMS-SWDIO).GPIO_Label=TMS
 PA13\ (JTMS-SWDIO).Locked=true
@@ -87,6 +117,10 @@ PA14\ (JTCK-SWCLK).GPIO_Label=TCK
 PA14\ (JTCK-SWCLK).Locked=true
 PA14\ (JTCK-SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
+PA15\ (JTDI).GPIOParameters=GPIO_Label
+PA15\ (JTDI).GPIO_Label=ENC_BTN
+PA15\ (JTDI).Locked=true
+PA15\ (JTDI).Signal=GPXTI15
 PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA2.GPIO_Label=USART_TX
 PA2.GPIO_Mode=GPIO_MODE_AF_PP
@@ -113,17 +147,69 @@ PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Signal=S_TIM3_CH1
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=STEPPER_DIR
+PA7.Locked=true
+PA7.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=LED_2
+PA8.Locked=true
+PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=MAGNETO_INT
+PB0.Locked=true
+PB0.Signal=GPXTI0
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=LED_3
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=BTN_TOP
+PB11.Locked=true
+PB11.Signal=GPXTI11
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=GPS_ENN
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=LED_6
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=LED_4
+PB15.Locked=true
+PB15.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=LED_1
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB3\ (JTDO-TRACESWO).Locked=true
 PB3\ (JTDO-TRACESWO).Mode=Trace_Asynchronous_SW
 PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
+PB4\ (NJTRST).GPIOParameters=GPIO_Label
+PB4\ (NJTRST).GPIO_Label=LED_5
+PB4\ (NJTRST).Locked=true
+PB4\ (NJTRST).Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=LED_7
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=SPI_CS
+PC0.Locked=true
+PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=MAGNETO_STATUS
+PC1.Locked=true
+PC1.Signal=GPIO_Input
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -140,6 +226,30 @@ PC2.Mode=Full_Duplex_Master
 PC2.Signal=SPI2_MISO
 PC3.Mode=Full_Duplex_Master
 PC3.Signal=SPI2_MOSI
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=GPS_PPS
+PC4.Locked=true
+PC4.Signal=GPXTI4
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=BTN_TOP
+PC5.Locked=true
+PC5.Signal=GPXTI5
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=BTN_CENTER
+PC6.Locked=true
+PC6.Signal=GPXTI6
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=LED_0
+PC7.Locked=true
+PC7.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=BTN_RIGHT
+PC8.Locked=true
+PC8.Signal=GPXTI8
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=BTN_LEFT
+PC9.Locked=true
+PC9.Signal=GPXTI9
 PH0-OSC_IN\ (PH0).Locked=true
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
@@ -151,7 +261,7 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -177,7 +287,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -233,8 +343,24 @@ RCC.VCOSAI1OutputFreq_Value=128000000
 RCC.VCOSAI2OutputFreq_Value=128000000
 SH.ADCx_IN9.0=ADC1_IN9,IN9-Single-Ended
 SH.ADCx_IN9.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SH.S_TIM2_CH1.0=TIM2_CH1,Encoder_Interface
 SH.S_TIM2_CH1.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
